--- a/pages/about/about.scss
+++ b/pages/about/about.scss
@@ -386,6 +386,40 @@ html, body {
     background-repeat: no-repeat;
   }
 
+  // Partners
+  .partners {
+    margin-top: 40px;
+    width: 100%;
+    word-spacing: 50px;
+
+    @extend .paddingMarginZero;
+  }
+
+  .partners__item {
+    display: inline-block;
+    width: 25%;
+    height: 100px;
+    margin-right: 20px;
+    text-align: center;
+
+    list-style-type: none;
+  }
+
+  .partners__link {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    text-decoration: none;
+
+    text-align: center;
+
+    @include verticalMiddle;
+  }
+
+  .partners__icon {
+    width: 100px;
+  }
+
   // FOOTER
   .footer {
     height: 280px;
