016: Interactive terms menu without active list items.

--- a/pages/terms/terms.scss
+++ b/pages/terms/terms.scss
@@ -249,6 +249,13 @@ html, body {
     border-bottom: $termNavActiveItem solid 6px;
   }
 
+  .article__header {
+    display: none;
+  }
+
+  .term-nav__controller:checked + .article__header {
+    display: block;
+  }
 
   .term-nav__link {
     height: 100%;
