--- a/pages/terms/terms.css
+++ b/pages/terms/terms.css
@@ -137,6 +137,10 @@ html, body {
   display: none; }
 [class='content'] .term-nav__controller:checked + .term-nav__item {
   border-bottom: #007067 solid 6px; }
+[class='content'] .article__header {
+  display: none; }
+[class='content'] .term-nav__controller:checked + .article__header {
+  display: block; }
 [class='content'] .term-nav__link {
   height: 100%;
   width: 100%;
