019: New header logo.

--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -1,5 +1,5 @@
 @import url(../../vendors/normalize.css);
-.verticalAlignClass, [class='about-page'] .header__pic, [class='about-page'] .header__slogan, [class='about-page'] .header__item, [class='about-page'] .header__text, [class='about-page'] .header__pic-arrow, [class='about-page'] .header__pic-heart {
+.verticalAlignClass, [class='about-page'] .header__item, [class='about-page'] .header__text, [class='about-page'] .header__pic-arrow, [class='about-page'] .header__pic-heart {
   vertical-align: middle;
   display: inline-block; }
 
@@ -12,11 +12,11 @@
 
 html, body {
   height: 100%;
+  font-size: 16px;
   font-family: 'Roboto', sans-serif; }
 
 .page-container {
-  min-height: calc(100% - 280px);
-  min-width: 680px; }
+  min-height: calc(100% - 280px); }
 
 [class='about-page'] .container {
   max-width: 1024px;
@@ -55,12 +55,9 @@ html, body {
   background-color: #00BEAE; }
 [class='about-page'] .header__logo {
   height: 100%;
-  padding-left: 20px; }
-  [class='about-page'] .header__logo:before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
+  background-image: url(../../images/logo.svg);
+  background-repeat: no-repeat;
+  background-position: 7px 5px; }
 [class='about-page'] .header__link {
   width: 100%;
   height: 100%;
@@ -74,22 +71,10 @@ html, body {
     display: inline-block;
     height: 100%;
     vertical-align: middle; }
-[class='about-page'] .header__pic {
-  height: 42px;
-  width: 42px;
-  background-image: url(../../images/logo.svg);
-  background-repeat: no-repeat;
-  background-position: -16px -4px; }
-[class='about-page'] .header__slogan {
-  color: #fff;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-left: 5px; }
 [class='about-page'] .header__nav {
   height: 100%;
   color: #fff;
-  font-size: .75em;
+  font-size: .75rem;
   font-weight: bold; }
 [class='about-page'] .header__list {
   padding: 0;
@@ -146,7 +131,7 @@ html, body {
   position: relative; }
 [class='about-page'] .article__header {
   color: #4F4F4F;
-  font-size: 2.25em;
+  font-size: 2.25rem;
   font-weight: bold; }
 [class='about-page'] .article__header_center {
   text-align: center; }
@@ -155,11 +140,11 @@ html, body {
 [class='about-page'] .article__text {
   color: #333333; }
 [class='about-page'] .article__text_small {
-  font-size: .9em;
-  line-height: 1.2em; }
+  font-size: .9rem;
+  line-height: 1.2rem; }
 [class='about-page'] .article__text_big {
-  font-size: 1.1em;
-  line-height: 1.5em; }
+  font-size: 1.1rem;
+  line-height: 1.5rem; }
 [class='about-page'] .article__text_half {
   width: 50%; }
 [class='about-page'] .article__link {
@@ -173,7 +158,7 @@ html, body {
   padding: 17px 0;
   margin: 40px 0 0;
   background-color: #FF5A5F;
-  font-size: .9em;
+  font-size: .9rem;
   text-align: center;
   transition: background-color 1s ease-in-out; }
   [class='about-page'] .article__link_intro:hover {
